--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,15 +12,15 @@ source:
 build:
   number: 0
   script: "{{ PYTHON }} -m pip install . -vv"
-  skip: true  # [py2k or win]
+  noarch: python
 
 requirements:
   host:
     - pip
-    - python
+    - python >=3.8
   run:
-    - flask >=0.12.4
-    - python
+    - flask >=2.2.5
+    - python >=3.8
     - python-ldap >=3.0.0
 
 test:
